added: moncao editor and changed to put individual files instead of zip in object storage
